instruments/AIOUSB/Headers/AIOUSB.h

__declspec(dllimport) unsigned long GetDeviceByEEPROMByte(unsigned char Data);
__declspec(dllimport) unsigned long GetDeviceByEEPROMData(unsigned long StartAddress, unsigned long DataSize, unsigned char *pData);
__declspec(dllimport) unsigned long AIOUSB_ResetChip(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long AIOUSB_ReloadDeviceLinks();
__declspec(dllimport) unsigned long AIOUSB_UploadD15LoFirmwaresByPID(char *pFirmScript);
__declspec(dllimport) unsigned long AIOUSB_SetGlobalTickRate(unsigned long DeviceIndex, double *pHz);
__declspec(dllimport) unsigned long AIOUSB_QuerySimplePNPData(unsigned long DeviceIndex, void *pPNPData, unsigned long *pPNPDataBytes);
__declspec(dllimport) unsigned long AWU_GenericBulkIn(unsigned long DeviceIndex, unsigned long PipeID, void *pData, unsigned long DataSize, unsigned long *pBytesRead);
__declspec(dllimport) unsigned long AWU_GenericBulkOut(unsigned long DeviceIndex, unsigned long PipeID, void *pData, unsigned long DataSize, unsigned long *pBytesWritten);
__declspec(dllimport) unsigned long ADC_GetTrigScan(unsigned long DeviceIndex, unsigned short *pBuf, long TimeoutMS);
__declspec(dllimport) unsigned long ADC_GetTrigScanV(unsigned long DeviceIndex, double *pBuf, long TimeoutMS);
__declspec(dllimport) unsigned long ADC_SetCalAndSave(unsigned long DeviceIndex, char *CalFileName, char *SaveCalFileName);
__declspec(dllimport) unsigned long ADC_BulkAbort(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long ADC_BulkMode(unsigned long DeviceIndex, unsigned long BulkMode);
__declspec(dllimport) unsigned long ADC_BulkContinuousCallbackStart(unsigned long DeviceIndex, unsigned long BufSize, unsigned long BaseBufCount, unsigned long Context, void *pCallback);
__declspec(dllimport) unsigned long ADC_BulkContinuousCallbackStartClocked(unsigned long DeviceIndex, unsigned long BufSize, unsigned long BaseBufCount, unsigned long Context, void *pCallback, double *Hz);
__declspec(dllimport) unsigned long ADC_BulkContinuousRingStart(unsigned long DeviceIndex, unsigned long RingBufferSize, unsigned long PacketsPerBlock);
__declspec(dllimport) unsigned long ADC_BulkContinuousEnd(unsigned long DeviceIndex, unsigned long *pIOStatus);
__declspec(dllimport) unsigned long ADC_FullStartRing(unsigned long DeviceIndex, void *pConfigBuf, unsigned long *ConfigBufSize, char *CalFileName, double *pCounterHz, unsigned long RingBufferSize, unsigned long PacketsPerBlock);
__declspec(dllimport) unsigned long ADC_ReadData(unsigned long DeviceIndex, void *pConfigBuf, unsigned long *ScansToRead, double *pData, double Timeout);
__declspec(dllimport) unsigned long ADC_InitFastITScanV(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long ADC_ResetFastITScanV(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long ADC_SetFastITScanVChannels(unsigned long DeviceIndex, unsigned long NewChannels);
__declspec(dllimport) unsigned long ADC_GetFastITScanV(unsigned long DeviceIndex, double *pBuf);
__declspec(dllimport) unsigned long ADC_GetITScanV(unsigned long DeviceIndex, double *pBuf);
__declspec(dllimport) unsigned long ADC_InitFastScanV(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long ADC_ResetFastScanV(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long ADC_GetFastScanV(unsigned long DeviceIndex, double *pBuf);
__declspec(dllimport) unsigned long DIO_ConfigureMasked(unsigned long DeviceIndex, void *pOuts, void *pOutsMask, void *pData, void *pDataMask, void *pTristates, void *pTristatesMask);
__declspec(dllimport) unsigned long DIO_Automap_ClearTable(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DIO_Automap_SetTable(unsigned long DeviceIndex, void *pMapTable, unsigned long *pMapTableBytes);
__declspec(dllimport) unsigned long DIO_Automap_AddEntry(unsigned long DeviceIndex, unsigned short *pMapEntry);
__declspec(dllimport) unsigned long DIO_Automap_SetTickDivisor(unsigned long DeviceIndex, unsigned char *pDivisor);
__declspec(dllimport) unsigned long DIO_PWM_Start(unsigned long DeviceIndex, void *pPWMTable, unsigned long *pPWMTableBytes);
__declspec(dllimport) unsigned long DIO_Latch_SetDivisor(unsigned long DeviceIndex, unsigned char *pDivisor);
__declspec(dllimport) unsigned long DIO_Latch_Reset(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DIO_Latch_Read(unsigned long DeviceIndex, unsigned char *pLowLatches, unsigned char *pHighLatches, unsigned char *pNoLatches, unsigned long *pLatchesBytes);
__declspec(dllimport) unsigned long DIO_Deb_SetConfig(unsigned long DeviceIndex, void *pDebTable, unsigned long *pDebTableBytes);
__declspec(dllimport) unsigned long DIO_Deb_ReadAll(unsigned long DeviceIndex, unsigned char *pDebData);
__declspec(dllimport) unsigned long DIO_CSA_DoSync(unsigned long DeviceIndex, double * BaseRateHz, double * DurAms, double * DurBms, double * DurCms);
__declspec(dllimport) unsigned long DIO_CSA_DebounceSet(unsigned long DeviceIndex, unsigned long DebounceCounts);
__declspec(dllimport) unsigned long DIO_CSA_DebounceReadAll(unsigned long DeviceIndex, void *pData);
__declspec(dllimport) unsigned long DAC_CSA_SetRangeLimits(unsigned long DeviceIndex, unsigned char *pData);
__declspec(dllimport) unsigned long DAC_CSA_ClearRangeLimits(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DACDIO_WriteAll(unsigned long DeviceIndex, unsigned short *pDACCounts, unsigned char *pDIOData);
__declspec(dllimport) unsigned long DACOutputSetClock(unsigned long DeviceIndex, double *ClockHz);