instruments/AIOUSB/DLL/AIOUSB.dpr


function VBADC_BulkContinuousCallbackStart(DeviceIndex: LongWord; BufSize: LongWord; BaseBufCount: LongWord; Context: LongWord; pCallback: Pointer): LongWord; stdcall;
begin
  Result := ADC_BulkContinuousCallbackStart(DeviceIndex, BufSize, BaseBufCount, Context, pCallback);
end;

function VBADC_BulkContinuousCallbackStartClocked(DeviceIndex: LongWord; BufSize: LongWord; BaseBufCount: LongWord; Context: LongWord; pCallback: Pointer; var Hz: Double): LongWord; stdcall;
begin
  Result := ADC_BulkContinuousCallbackStartClocked(DeviceIndex, BufSize, BaseBufCount, Context, pCallback, Hz);
end;

function VBADC_BulkContinuousRingStart(DeviceIndex: LongWord; RingBufferSize: LongWord; PacketsPerBlock: LongWord): LongWord; stdcall;
begin
  Result := ADC_BulkContinuousRingStart(DeviceIndex, RingBufferSize, PacketsPerBlock);
end;

function VBADC_BulkContinuousEnd(DeviceIndex: LongWord; pIOStatus: PLongWord): LongWord; stdcall;
begin
  Result := ADC_BulkContinuousEnd(DeviceIndex, pIOStatus);
end;

function VBADC_GetBuf(DeviceIndex: LongWord; out pData: Pointer; out BufSize: LongWord; pReserved: Pointer; Timeout: Double): LongWord; stdcall;
begin
  Result := ADC_GetBuf(DeviceIndex, pData, BufSize, pReserved, Timeout);
end;

function VBADC_ReadData(DeviceIndex: LongWord; Config: PByte; var ScansToRead: LongWord; pData: PDouble; Timeout: Double): LongWord; stdcall;
begin
  Result := ADC_ReadData(DeviceIndex, Config, ScansToRead, pData, Timeout);
end;

function VBADC_FullStartRing(DeviceIndex: LongWord; pConfigBuf: Pointer; var ConfigBufSize: LongWord; CalFileName: PAnsiChar; pCounterHz: PDouble; RingBufferSize: LongWord; PacketsPerBlock: LongWord): LongWord; stdcall;
begin
  Result := ADC_FullStartRing(DeviceIndex, pConfigBuf, ConfigBufSize, CalFileName, pCounterHz, RingBufferSize, PacketsPerBlock);
end;





exports
  {
  , DoIOBench           , DoIOBench            name '_DoIOBench'           //, VBDoIOBench
  {}

    DEB_BufTest,
    GetDeviceHandle,
    GetPipes,
    DEB_SetInterface, DEB_BulkIn, DEB_BulkOut,
    AWU_GenericBulkIn, AWU_GenericBulkOut,
    ADC_BulkAbort,
    ADC_BulkContinuousDebug

  , ADC_GetBuf                                      , ADC_GetBuf                             name '_ADC_GetBuf'                               , VBADC_GetBuf

  , ADC_CSA_GetScanOversamples , ADC_CSA_GetScanOversamples name '_ADC_CSA_GetScanOversamples' , VBADC_CSA_GetScanOversamples



  , DACOutputLoadProcess                            , DACOutputLoadProcess                   name '_DACOutputLoadProcess'                     , VBDACOutputLoadProcess

  , AIOUSB_AbortPipe                                , AIOUSB_AbortPipe                       name '_AIOUSB_AbortPipe'                         , VBAIOUSB_AbortPipe

  , AIOUSB_QuerySimplePNPData                       , AIOUSB_QuerySimplePNPData              name '_AIOUSB_GetPNPData'                        , VBAIOUSB_QuerySimplePNPData

  , ADC_CSA_InitFastScanV  name 'ADC_InitFastScanV' , ADC_CSA_InitFastScanV                  name '_ADC_InitFastScanV'                        , VBADC_CSA_InitFastScanV  name 'VBADC_InitFastScanV'
  , ADC_CSA_ResetFastScanV name 'ADC_ResetFastScanV', ADC_CSA_ResetFastScanV                 name '_ADC_ResetFastScanV'                       , VBADC_CSA_ResetFastScanV name 'VBADC_ResetFastScanV'
  , ADC_CSA_GetFastScanV   name 'ADC_GetFastScanV'  , ADC_CSA_GetFastScanV                   name '_ADC_GetFastScanV'                         , VBADC_CSA_GetFastScanV   name 'VBADC_GetFastScanV'

  , WDG_Pet                                         , WDG_Pet                                name '_WDG_Pet'                                  , VBWDG_Pet
  , WDG_GetStatus                                   , WDG_GetStatus                          name '_WDG_GetStatus'                            , VBWDG_GetStatus
  , WDG_SetConfig                                   , WDG_SetConfig                          name '_WDG_SetConfig'                            , VBWDG_SetConfig

  , AIOUSB_ReloadDeviceLinks                        , AIOUSB_ReloadDeviceLinks               name '_AIOUSB_ReloadDeviceLinks'                 , VBAIOUSB_ReloadDeviceLinks

  , AIOUSB_UploadD15LoFirmwaresByPID                , AIOUSB_UploadD15LoFirmwaresByPID       name '_AIOUSB_UploadD15LoFirmwaresByPID'         , VBAIOUSB_UploadD15LoFirmwaresByPID

  , ADC_ReadData                                    , ADC_ReadData                           name '_ADC_ReadData'                             , VBADC_ReadData
  , ADC_FullStartRing                               , ADC_FullStartRing                      name '_ADC_FullStartRing'                        , VBADC_FullStartRing
  , ADC_BulkContinuousRingStart                     , ADC_BulkContinuousRingStart            name '_ADC_BulkContinuousRingStart'              , VBADC_BulkContinuousRingStart

  , DIO_ConfigureMasked                             , DIO_ConfigureMasked                    name '_DIO_ConfigureMasked'                      , VBDIO_ConfigureMasked
  , DACOutputSetClock                               , DACOutputSetClock                      name '_DACOutputSetClock'                        , VBDACOutputSetClock

  , DACDIO_WriteAll                                 , DACDIO_WriteAll                        name '_DACDIO_WriteAll'                          , VBDACDIO_WriteAll

  , ADC_BulkContinuousCallbackStartClocked          , ADC_BulkContinuousCallbackStartClocked name '_ADC_BulkContinuousCallbackStartClocked'   , VBADC_BulkContinuousCallbackStartClocked

  , ADC_SetCalAndSave                               , ADC_SetCalAndSave                      name '_ADC_SetCalAndSave'                        , VBADC_SetCalAndSave

  , ADC_CSA_InitFastScanV                           , ADC_CSA_InitFastScanV                  name '_ADC_CSA_InitFastScanV'                    , VBADC_CSA_InitFastScanV
  , ADC_CSA_ResetFastScanV                          , ADC_CSA_ResetFastScanV                 name '_ADC_CSA_ResetFastScanV'                   , VBADC_CSA_ResetFastScanV
  , ADC_CSA_GetFastScanV                            , ADC_CSA_GetFastScanV                   name '_ADC_CSA_GetFastScanV'                     , VBADC_CSA_GetFastScanV

  , ADC_BulkMode                                    , ADC_BulkMode                           name '_ADC_BulkMode'                             , VBADC_BulkMode
  , ADC_GetTrigScanV                                , ADC_GetTrigScanV                       name '_ADC_GetTrigScanV'                         , VBADC_GetTrigScanV
  , ADC_GetTrigScan                                 , ADC_GetTrigScan                        name '_ADC_GetTrigScan'                          , VBADC_GetTrigScan

  , DIO_CSA_ReadAllString                           , DIO_CSA_ReadAllString                  name '_DIO_CSA_ReadAllString'                    , VBDIO_CSA_ReadAllString
  , AIOUSB_ResetChip                                , AIOUSB_ResetChip                       name '_AIOUSB_ResetChip'                         , VBAIOUSB_ResetChip
  , ADC_BulkContinuousEnd                           , ADC_BulkContinuousEnd                  name '_ADC_BulkContinuousEnd'                    , VBADC_BulkContinuousEnd
  , ADC_BulkContinuousCallbackStart                 , ADC_BulkContinuousCallbackStart        name '_ADC_BulkContinuousCallbackStart'          , VBADC_BulkContinuousCallbackStart

  , DIO_Deb_ReadAll                                 , DIO_Deb_ReadAll                        name '_DIO_Deb_ReadAll'                          , VBDIO_Deb_ReadAll
  , DIO_Deb_SetConfig                               , DIO_Deb_SetConfig                      name '_DIO_Deb_SetConfig'                        , VBDIO_Deb_SetConfig

  , DIO_Latch_Read                                  , DIO_Latch_Read                         name '_DIO_Latch_Read'                           , VBDIO_Latch_Read
  , DIO_Latch_Reset                                 , DIO_Latch_Reset                        name '_DIO_Latch_Reset'                          , VBDIO_Latch_Reset
  , DIO_Latch_SetDivisor                            , DIO_Latch_SetDivisor                   name '_DIO_Latch_SetDivisor'                     , VBDIO_Latch_SetDivisor

  , DIO_PWM_Start                                   , DIO_PWM_Start                          name '_DIO_PWM_Start'                            , VBDIO_PWM_Start

  , DIO_Automap_SetTickDivisor                      , DIO_Automap_SetTickDivisor             name '_DIO_Automap_SetTickDivisor'               , VBDIO_Automap_SetTickDivisor
  , DIO_Automap_AddEntry                            , DIO_Automap_AddEntry                   name '_DIO_Automap_AddEntry'                     , VBDIO_Automap_AddEntry
  , DIO_Automap_SetTable                            , DIO_Automap_SetTable                   name '_DIO_Automap_SetTable'                     , VBDIO_Automap_SetTable
  , DIO_Automap_ClearTable                          , DIO_Automap_ClearTable                 name '_DIO_Automap_ClearTable'                   , VBDIO_Automap_ClearTable

  , AIOUSB_SetGlobalTickRate                        , AIOUSB_SetGlobalTickRate               name '_AIOUSB_SetGlobalTickRate'                 , VBAIOUSB_SetGlobalTickRate

  , AIOUSB_GetDefaultsTable                         , AIOUSB_GetDefaultsTable                name '_AIOUSB_GetDefaultsTable'                  , VBAIOUSB_GetDefaultsTable
  , AIOUSB_SetDefaultsTable                         , AIOUSB_SetDefaultsTable                name '_AIOUSB_SetDefaultsTable'                  , VBAIOUSB_SetDefaultsTable
  , AIOUSB_RestoreFactoryDefaults                   , AIOUSB_RestoreFactoryDefaults          name '_AIOUSB_RestoreFactoryDefaults'            , VBAIOUSB_RestoreFactoryDefaults
  , AIOUSB_SaveStateAsDefaults                      , AIOUSB_SaveStateAsDefaults             name '_AIOUSB_SaveStateAsDefaults'               , VBAIOUSB_SaveStateAsDefaults

  , DAC_CSA_ClearRangeLimits                        , DAC_CSA_ClearRangeLimits               name '_DAC_CSA_ClearRangeLimits'                 , VBDAC_CSA_ClearRangeLimits
  , DAC_CSA_SetRangeLimits                          , DAC_CSA_SetRangeLimits                 name '_DAC_CSA_SetRangeLimits'                   , VBDAC_CSA_SetRangeLimits
  , DIO_CSA_DebounceSet                             , DIO_CSA_DebounceSet                    name '_DIO_CSA_DebounceSet'                      , VBDIO_CSA_DebounceSet
  , DIO_CSA_DebounceReadAll                         , DIO_CSA_DebounceReadAll                name '_DIO_CSA_DebounceReadAll'                  , VBDIO_CSA_DebounceReadAll

  , ADC_SetFastITScanVChannels                      , ADC_SetFastITScanVChannels             name '_ADC_SetFastITScanVChannels'               , VBADC_SetFastITScanVChannels

  , GetDeviceByEEPROMByte                           , GetDeviceByEEPROMByte                  name '_GetDeviceByEEPROMByte'                    , VBGetDeviceByEEPROMByte
  , GetDeviceByEEPROMData                           , GetDeviceByEEPROMData                  name '_GetDeviceByEEPROMData'                    , VBGetDeviceByEEPROMData

  , DIO_CSA_DoSync                                  , DIO_CSA_DoSync                         name '_DIO_CSA_DoSync'                           , VBDIO_CSA_DoSync
  , ADC_ResetFastITScanV                            , ADC_ResetFastITScanV                   name '_ADC_ResetFastITScanV'                     , VBADC_ResetFastITScanV
  , ADC_InitFastITScanV                             , ADC_InitFastITScanV                    name '_ADC_InitFastITScanV'                      , VBADC_InitFastITScanV
  , ADC_GetFastITScanV                              , ADC_GetFastITScanV                     name '_ADC_GetFastITScanV'                       , VBADC_GetFastITScanV
  , ADC_GetITScanV                                  , ADC_GetITScanV                         name '_ADC_GetITScanV'                           , VBADC_GetITScanV
